Updated Spanish translation
svn path=/trunk/; revision=3033

--- a/po/es.po
+++ b/po/es.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-01-10 20:44+0000\n"
-"PO-Revision-Date: 2008-01-11 13:45+0100\n"
+"POT-Creation-Date: 2008-01-13 16:16+0000\n"
+"PO-Revision-Date: 2008-01-13 18:41+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
 "Language-Team: Español <<gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -43,7 +43,7 @@ msgstr "Archivos de configuración"
 msgid "Curses Functions"
 msgstr "Funciones Curses"
 
-#: ../data/man.xml.in.h:5 ../data/toc.xml.in.h:36
+#: ../data/man.xml.in.h:5 ../data/toc.xml.in.h:35
 msgid "Development"
 msgstr "Desarrollo"
 
@@ -284,11 +284,11 @@ msgid "X11 Overviews"
 msgstr "Vistas generales X11"
 
 #: ../data/toc.xml.in.h:1
-msgid "2DGraphics"
+msgid "2D Graphics"
 msgstr "Gráficos 2D"
 
 #: ../data/toc.xml.in.h:2
-msgid "3DGraphics"
+msgid "3D Graphics"
 msgstr "Gráficos 3D"
 
 #: ../data/toc.xml.in.h:3
@@ -324,15 +324,15 @@ msgid "Arcade Games"
 msgstr "Juegos arcade"
 
 #: ../data/toc.xml.in.h:11
-msgid "Archiving"
-msgstr "Archivado"
+msgid "Archiving Tools"
+msgstr "Herramientas de archivado"
 
 #: ../data/toc.xml.in.h:12
 msgid "Art"
 msgstr "Arte"
 
 #: ../data/toc.xml.in.h:13
-msgid "ArtificialIntelligence"
+msgid "Artificial Intelligence"
 msgstr "Inteligencia artificial"
 
 #: ../data/toc.xml.in.h:14
@@ -340,99 +340,96 @@ msgid "Astronomy"
 msgstr "Astronomía"
 
 #: ../data/toc.xml.in.h:15
-msgid "AudioVideoEditing"
-msgstr "Edición de sonido y vídeo"
-
-#: ../data/toc.xml.in.h:16
 msgid "Biology"
 msgstr "Biología"
 
-#: ../data/toc.xml.in.h:17
+#: ../data/toc.xml.in.h:16
 msgid "Blocks Games"
 msgstr "Juegos de bloques"
 
-#: ../data/toc.xml.in.h:18
+#: ../data/toc.xml.in.h:17
 msgid "Board Games"
 msgstr "Juegos de tablero"
 
-#: ../data/toc.xml.in.h:19
+#: ../data/toc.xml.in.h:18
 msgid "Building"
 msgstr "Construcción"
 
-#: ../data/toc.xml.in.h:20
+#: ../data/toc.xml.in.h:19
 msgid "Calculator"
 msgstr "Calculadora"
 
-#: ../data/toc.xml.in.h:21
+#: ../data/toc.xml.in.h:20
 msgid "Calendar"
 msgstr "Calendario"
 
-#: ../data/toc.xml.in.h:22
+#: ../data/toc.xml.in.h:21
 msgid "Card Games"
 msgstr "Juegos de cartas"
 
-#: ../data/toc.xml.in.h:23
-msgid "Chart"
-msgstr "Gráficos"
+#: ../data/toc.xml.in.h:22
+msgid "Charting Tools"
+msgstr "Herramientas de gráficos"
 
-#: ../data/toc.xml.in.h:24
+#: ../data/toc.xml.in.h:23
 msgid "Chat"
 msgstr "Chat"
 
-#: ../data/toc.xml.in.h:25
+#: ../data/toc.xml.in.h:24
 msgid "Chemistry"
 msgstr "Química"
 
+#: ../data/toc.xml.in.h:25
+msgid "Clocks"
+msgstr "Relojes"
+
 #: ../data/toc.xml.in.h:26
-msgid "Clock"
-msgstr "Reloj"
+msgid "Compression Tools"
+msgstr "Herramientas de compresión"
 
 #: ../data/toc.xml.in.h:27
-msgid "Compression"
-msgstr "Compresión"
+msgid "Computer Science"
+msgstr "Ciencias computacionales"
 
 #: ../data/toc.xml.in.h:28
-msgid "ComputerScience"
-msgstr "Informática (ciencias computacionales)"
-
-#: ../data/toc.xml.in.h:29
 msgid "Construction"
 msgstr "Construcción"
 
-#: ../data/toc.xml.in.h:30
-msgid "ContactManagement"
+#: ../data/toc.xml.in.h:29
+msgid "Contact Management"
 msgstr "Gestión de contactos"
 
-#: ../data/toc.xml.in.h:31
-msgid "DataVisualization"
+#: ../data/toc.xml.in.h:30
+msgid "Data Visualization"
 msgstr "Visualización de datos"
 
-#: ../data/toc.xml.in.h:32
-msgid "Database"
+#: ../data/toc.xml.in.h:31
+msgid "Databases"
 msgstr "Base de datos"
 
-#: ../data/toc.xml.in.h:33
-msgid "Debugger"
-msgstr "Depurador"
+#: ../data/toc.xml.in.h:32
+msgid "Debuggers"
+msgstr "Depuradores"
 
-#: ../data/toc.xml.in.h:34
+#: ../data/toc.xml.in.h:33
 msgid "Desktop"
 msgstr "Escritorio"
 
-#: ../data/toc.xml.in.h:35
-msgid "DesktopSettings"
+#: ../data/toc.xml.in.h:34
+msgid "Desktop Settings"
 msgstr "Ajustes del escritorio"
 
-#: ../data/toc.xml.in.h:37
+#: ../data/toc.xml.in.h:36
 msgid "Dialup"
 msgstr "Marcado telefónico"
 
-#: ../data/toc.xml.in.h:38
-msgid "Dictionary"
-msgstr "Diccionario"
+#: ../data/toc.xml.in.h:37
+msgid "Dictionaries"
+msgstr "Diccionarios"
 
+#. Translators: this is a menu title for burning audio and video to dics
 #: ../data/toc.xml.in.h:39
-msgid "DiscBurning"
+msgid "Disc Burning"
 msgstr "Grabado de discos"
 
 #: ../data/toc.xml.in.h:40
@@ -452,8 +449,8 @@ msgid "Electronics"
 msgstr "Electrónica"
 
 #: ../data/toc.xml.in.h:44
-msgid "Email"
-msgstr "Correo-e"
+msgid "Email Tools"
+msgstr "Herramientas de correo-e"
 
 #: ../data/toc.xml.in.h:45
 msgid "Emulator"
@@ -464,15 +461,15 @@ msgid "Engineering"
 msgstr "Ingeniería"
 
 #: ../data/toc.xml.in.h:47
-msgid "FileManager"
+msgid "File Manager"
 msgstr "Gestor de archivos"
 
 #: ../data/toc.xml.in.h:48
-msgid "FileTools"
+msgid "File Tools"
 msgstr "Herramientas de archivos"
 
 #: ../data/toc.xml.in.h:49
-msgid "FileTransfer"
+msgid "File Transfer"
 msgstr "Transferencia de archivos"
 
 #: ../data/toc.xml.in.h:50
@@ -480,12 +477,12 @@ msgid "Filesystem"
 msgstr "Sistema de archivos"
 
 #: ../data/toc.xml.in.h:51
-msgid "Finance"
-msgstr "Finanzas"
+msgid "Financial Tools"
+msgstr "Herramientas financieras"
 
 #: ../data/toc.xml.in.h:52
-msgid "FlowChart"
-msgstr "Gráficos de flujo"
+msgid "Flow Charting Tools"
+msgstr "Herramientas de gráficos de flujo"
 
 #: ../data/toc.xml.in.h:53
 msgid "GNOME Applications"
@@ -496,8 +493,8 @@ msgid "GTK"
 msgstr "GTK"
 
 #: ../data/toc.xml.in.h:55
-msgid "GUIDesigner"
-msgstr "Diseñador de IGU"
+msgid "GUI Designers"
+msgstr "Diseñadores de IGU"
 
 #: ../data/toc.xml.in.h:57
 msgid "Generic applications for the GNOME environment"
@@ -532,11 +529,11 @@ msgid "Guides for getting involved in development"
 msgstr "Guías para involucrarse en el desarrollo"
 
 #: ../data/toc.xml.in.h:65
-msgid "HamRadio"
+msgid "Ham Radio"
 msgstr "Radio Ham"
 
 #: ../data/toc.xml.in.h:66
-msgid "HardwareSettings"
+msgid "Hardware Settings"
 msgstr "Ajustes del hardware"
 
 #: ../data/toc.xml.in.h:67
@@ -548,19 +545,19 @@ msgid "History"
 msgstr "Historia"
 
 #: ../data/toc.xml.in.h:69
-msgid "IDE"
+msgid "IDEs"
 msgstr "EID"
 
 #: ../data/toc.xml.in.h:70
-msgid "IRCClient"
-msgstr "Cliente de IRC"
+msgid "IRC Clients"
+msgstr "Clientes de IRC"
 
 #: ../data/toc.xml.in.h:71
-msgid "ImageProcessing"
+msgid "Image Processing"
 msgstr "Procesado de imágenes"
 
 #: ../data/toc.xml.in.h:72
-msgid "InstantMessaging"
+msgid "Instant Messaging"
 msgstr "Mensajería instantánea"
 
 #: ../data/toc.xml.in.h:73
@@ -604,7 +601,7 @@ msgid "Math"
 msgstr "Matemáticas"
 
 #: ../data/toc.xml.in.h:82
-msgid "MedicalSoftware"
+msgid "Medical Software"
 msgstr "Software médico"
 
 #: ../data/toc.xml.in.h:83
@@ -616,8 +613,8 @@ msgid "Miscellaneous Documentation"
 msgstr "Documentos misceláneos"
 
 #: ../data/toc.xml.in.h:85
-msgid "Mixer"
-msgstr "Mezclador"
+msgid "Mixers"
+msgstr "Mezcladores"
 
 #: ../data/toc.xml.in.h:86
 msgid "Monitor"
@@ -636,7 +633,7 @@ msgid "News"
 msgstr "Noticias"
 
 #: ../data/toc.xml.in.h:90
-msgid "NumericalAnalysis"
+msgid "Numerical Analysis"
 msgstr "Análisis numérico"
 
 #: ../data/toc.xml.in.h:91
@@ -660,15 +657,15 @@ msgid "P2P"
 msgstr "P2P"
 
 #: ../data/toc.xml.in.h:96
-msgid "PDA"
-msgstr "PDA"
+msgid "PDA Communication"
+msgstr "Comunicación de PDA"
 
 #: ../data/toc.xml.in.h:97
-msgid "PackageManager"
+msgid "Package Manager"
 msgstr "Gestor de paquetes"
 
 #: ../data/toc.xml.in.h:98
-msgid "ParallelComputing"
+msgid "Parallel Computing"
 msgstr "Computación en paralelo"
 
 #: ../data/toc.xml.in.h:99
@@ -679,188 +676,195 @@ msgstr "Fotografía"
 msgid "Physics"
 msgstr "Física"
 
-#: ../data/toc.xml.in.h:101
-msgid "Player"
-msgstr "Jugador"
-
+#. Translators: this is a menu title for audio and video players
 #: ../data/toc.xml.in.h:102
-msgid "Presentation"
-msgstr "Presentación"
+msgid "Players"
+msgstr "Reproductores"
 
-#: ../data/toc.xml.in.h:103 ../src/yelp-print.c:337 ../src/yelp-print.c:364
+#: ../data/toc.xml.in.h:103
+msgid "Presentation Tools"
+msgstr "Herramientas de presentaciones"
+
+#: ../data/toc.xml.in.h:104 ../src/yelp-print.c:337 ../src/yelp-print.c:364
 msgid "Printing"
 msgstr "Imprimir"
 
-#: ../data/toc.xml.in.h:104
-msgid "Profiling"
-msgstr "Perfilador"
-
 #: ../data/toc.xml.in.h:105
-msgid "ProjectManagement"
-msgstr "Gestión de proyectos"
+msgid "Profiling Tools"
+msgstr "Herramientas de perfiladores"
 
 #: ../data/toc.xml.in.h:106
+msgid "Project Management Tools"
+msgstr "Herramientas de gestión de proyectos"
+
+#: ../data/toc.xml.in.h:107
 msgid "Publishing"
 msgstr "Publicaciones"
 
-#: ../data/toc.xml.in.h:107
+#: ../data/toc.xml.in.h:108
 msgid "Qt"
 msgstr "Qt"
 
-#: ../data/toc.xml.in.h:108
-msgid "RasterGraphics"
+#: ../data/toc.xml.in.h:109
+msgid "Raster Graphics"
 msgstr "Gráficos raster"
 
-#: ../data/toc.xml.in.h:109
-msgid "Recorder"
-msgstr "Grabador"
-
-#: ../data/toc.xml.in.h:110
-msgid "RemoteAccess"
-msgstr "Acceso remoto"
-
+#. Translators: this is a menu title for audio and video recorders
 #: ../data/toc.xml.in.h:111
-msgid "RevisionControl"
-msgstr "Control de revisiones"
+msgid "Recorders"
+msgstr "Grabadores"
 
 #: ../data/toc.xml.in.h:112
+msgid "Remote Access"
+msgstr "Acceso remoto"
+
+#: ../data/toc.xml.in.h:113
+msgid "Revision Control"
+msgstr "Control de revisiones"
+
+#: ../data/toc.xml.in.h:114
 msgid "Robotics"
 msgstr "Robótica"
 
-#: ../data/toc.xml.in.h:113
+#: ../data/toc.xml.in.h:115
 msgid "Role Playing Games"
 msgstr "Juegos de rol"
 
-#: ../data/toc.xml.in.h:114
+#: ../data/toc.xml.in.h:116
 msgid "Scanning"
 msgstr "Escáner"
 
-#: ../data/toc.xml.in.h:115
+#: ../data/toc.xml.in.h:117
 msgid "Science"
 msgstr "Científicas"
 
-#: ../data/toc.xml.in.h:116
+#: ../data/toc.xml.in.h:118
 msgid "Security"
 msgstr "Seguridad"
 
-#: ../data/toc.xml.in.h:117
-msgid "Sequencer"
-msgstr "Secuenciador"
+#: ../data/toc.xml.in.h:119
+msgid "Sequencers"
+msgstr "Secuenciadores"
 
-#: ../data/toc.xml.in.h:118
+#: ../data/toc.xml.in.h:120
 msgid "Settings"
 msgstr "Ajustes"
 
-#: ../data/toc.xml.in.h:119
+#: ../data/toc.xml.in.h:121
 msgid "Settings users can manipulate to make their environment more pleasant"
 msgstr "Ajustes que los usuarios pueden manipular para hacer su entorno más agradable"
 
-#: ../data/toc.xml.in.h:120
+#: ../data/toc.xml.in.h:122
 msgid "Simulation Games"
 msgstr "Juegos de simulación"
 
-#: ../data/toc.xml.in.h:121
+#: ../data/toc.xml.in.h:123
 msgid "Sound"
 msgstr "Sonido"
 
-#: ../data/toc.xml.in.h:122
+#: ../data/toc.xml.in.h:124
 msgid "Sound &amp; Video"
 msgstr "Sonido y vídeo"
 
-#: ../data/toc.xml.in.h:123
+#: ../data/toc.xml.in.h:125
+msgid "Sound &amp; Video Editing"
+msgstr "Edición de sonido y vídeo"
+
+#: ../data/toc.xml.in.h:126
 msgid "Sports"
 msgstr "Deportes"
 
-#: ../data/toc.xml.in.h:124
+#: ../data/toc.xml.in.h:127
 msgid "Sports Games"
 msgstr "Juegos de deportes"
 
-#: ../data/toc.xml.in.h:125
-msgid "Spreadsheet"
-msgstr "Hoja de cálculo"
+#: ../data/toc.xml.in.h:128
+msgid "Spreadsheet Tools"
+msgstr "Herramientas de hojas de cálculo"
 
-#: ../data/toc.xml.in.h:126
+#: ../data/toc.xml.in.h:129
 msgid "Strategy Games"
 msgstr "Juegos de estrategia"
 
-#: ../data/toc.xml.in.h:127
+#: ../data/toc.xml.in.h:130
 msgid "System"
 msgstr "Sistema"
 
-#: ../data/toc.xml.in.h:128
+#: ../data/toc.xml.in.h:131
 msgid "TV"
 msgstr "TV"
 
-#: ../data/toc.xml.in.h:129
+#: ../data/toc.xml.in.h:132
 msgid "Telephony"
 msgstr "Telefonía"
 
-#: ../data/toc.xml.in.h:130
-msgid "TelephonyTools"
+#: ../data/toc.xml.in.h:133
+msgid "Telephony Tools"
 msgstr "Herramientas de telefonía"
 
-#: ../data/toc.xml.in.h:131
-msgid "TerminalEmulator"
+#: ../data/toc.xml.in.h:134
+msgid "Terminal Emulator"
 msgstr "Emulación de terminales"
 
-#: ../data/toc.xml.in.h:132
+#: ../data/toc.xml.in.h:135
+msgid "Text Editors"
+msgstr "Editores de textos"
+
+#: ../data/toc.xml.in.h:136
 msgid "Text Tools"
 msgstr "Herramientas de texto"
 
-#: ../data/toc.xml.in.h:133
-msgid "TextEditor"
-msgstr "Editor de textos"
-
-#: ../data/toc.xml.in.h:134
+#: ../data/toc.xml.in.h:137
 msgid "Tools to help you manage your computer"
 msgstr "Utilidades para ayudarle a gestionar su equipo"
 
-#: ../data/toc.xml.in.h:135
-msgid "Translation"
-msgstr "Traducción"
+#: ../data/toc.xml.in.h:138
+msgid "Translation Tools"
+msgstr "Herramientas de traducción"
 
-#: ../data/toc.xml.in.h:136
-msgid "Tuner"
-msgstr "Sintonizador"
+#: ../data/toc.xml.in.h:139
+msgid "Tuners"
+msgstr "Sintonizadores"
 
-#: ../data/toc.xml.in.h:137
+#: ../data/toc.xml.in.h:140
 msgid "Utilities"
 msgstr "Utilidades"
 
-#: ../data/toc.xml.in.h:138
+#: ../data/toc.xml.in.h:141
 msgid "Utilities to help you get work done"
 msgstr "Utilidades para ayudarle a realizar su trabajo"
 
-#: ../data/toc.xml.in.h:139
-msgid "VectorGraphics"
+#: ../data/toc.xml.in.h:142
+msgid "Vector Graphics"
 msgstr "Gráficos vectoriales"
 
-#: ../data/toc.xml.in.h:140
+#: ../data/toc.xml.in.h:143
 msgid "Video"
 msgstr "Vídeo"
 
-#: ../data/toc.xml.in.h:141
-msgid "VideoConference"
+#: ../data/toc.xml.in.h:144
+msgid "Video Conference"
 msgstr "Videoconferencia"
 
-#: ../data/toc.xml.in.h:142
+#. Translators: This is a menu title for graphics viewing applications
+#: ../data/toc.xml.in.h:146
 msgid "Viewer"
 msgstr "Visor"
 
-#: ../data/toc.xml.in.h:143
-msgid "WebBrowser"
+#: ../data/toc.xml.in.h:147
+msgid "Web Browser"
 msgstr "Navegador web"
 
-#: ../data/toc.xml.in.h:144
-msgid "WebDevelopment"
+#: ../data/toc.xml.in.h:148
+msgid "Web Development"
 msgstr "Desarrollo web"
 
-#: ../data/toc.xml.in.h:145
+#: ../data/toc.xml.in.h:149
 msgid "Welcome to the GNOME Help Browser"
 msgstr "Bienvenido al visor de ayuda de GNOME"
 
-#: ../data/toc.xml.in.h:146
-msgid "WordProcessor"
+#: ../data/toc.xml.in.h:150
+msgid "Word Processors"
 msgstr "Procesador de textos"
 
 #: ../data/ui/yelp.glade.h:1
