--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,12 @@
 2008-01-13  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* data/toc.xml.in: 
+	Fix Games category
+	
+	* data/toc.xml.in: 
 	Fix some menu titles to be non-insane names
 	Add translator comments to unclear menu entries
+	
 
 2008-01-10  Don Scorgie  <dscorgie@svn.gnome.org>
 
