Make / activate find Make find go away when losing focus (like epiphany)
* src/gtkentryaction.c: 
* src/gtkentryaction.h: 
* src/yelp-window.c: 
Make / activate find
Make find go away when losing focus (like epiphany)

svn path=/trunk/; revision=3036

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,9 +1,16 @@
 2008-01-13  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* src/gtkentryaction.c: 
+	* src/gtkentryaction.h: 
+	* src/yelp-window.c: 
+	Make / activate find
+	Make find go away when losing focus (like epiphany)
+	
+	
 	* src/yelp-window.c: 
 	Fix crash on going backward then forward after
 	an external link (bug #487849)
-	
+
 	* data/toc.xml.in: 
 	Fix Games category
 	
