--- a/po/et.po
+++ b/po/et.po
@@ -2,20 +2,20 @@
 # Estonian translation of Yelp.
 #
 # Copyright (C) 2002-2006 Free Software Foundation, Inc.
-# Copyright (C) 2007 The GNOME Project
+# Copyright (C) 2007, 2008 The GNOME Project
 # This file is distributed under the same license as the Yelp package.
 #
 # Tõivo Leedjärv <toivo@linux.ee>, 2002-2004.
 # Allan Sims <allsi@eau.ee>, 2003.
 # Priit Laes <amd store20 com>, 2005, 2006.
-# Ivar Smolin <okul@linux.ee>, 2005-2007.
+# Ivar Smolin <okul@linux.ee>, 2005-2008.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-12-04 04:07+0000\n"
-"PO-Revision-Date: 2007-12-23 11:34+0200\n"
+"POT-Creation-Date: 2008-01-04 22:28+0000\n"
+"PO-Revision-Date: 2008-01-10 19:40+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -500,7 +500,7 @@ msgstr "GTK"
 
 #: ../data/toc.xml.in.h:55
 msgid "GUIDesigner"
-msgstr ""
+msgstr "Kasutajaliidese disainer"
 
 #: ../data/toc.xml.in.h:57
 msgid "Generic applications for the GNOME environment"
@@ -584,12 +584,12 @@ msgstr "Lastemängud"
 
 #: ../data/toc.xml.in.h:77
 msgid ""
-"Learn more about making you're system more accessible for a range of "
+"Learn more about making your system more accessible for a range of "
 "disabilities"
 msgstr ""
 
 #: ../data/toc.xml.in.h:78
-msgid "Licences"
+msgid "Licenses"
 msgstr "Litsentsid"
 
 #: ../data/toc.xml.in.h:79
@@ -753,7 +753,7 @@ msgid "Settings"
 msgstr "Sätted"
 
 #: ../data/toc.xml.in.h:119
-msgid "Settings users can manipulate to make their environment more pleasent"
+msgid "Settings users can manipulate to make their environment more pleasant"
 msgstr ""
 
 #: ../data/toc.xml.in.h:120
@@ -813,8 +813,8 @@ msgid "TextEditor"
 msgstr "Tekstiredaktor"
 
 #: ../data/toc.xml.in.h:134
-msgid "Tools to help you manage you're computer"
-msgstr "Sinu arvuti haldamise tööriistad"
+msgid "Tools to help you manage your computer"
+msgstr "Kasulikud tööriistad sinu arvuti haldamiseks"
 
 #: ../data/toc.xml.in.h:135
 msgid "Translation"
@@ -1506,7 +1506,7 @@ msgstr ""
 "Tõivo Leedjärv <toivo@linux.ee>, 2002-2004.\n"
 "Allan Sims <allsi@eau.ee>, 2003.\n"
 "Priit Laes <amd@store20.com>, 2005, 2006.\n"
-"Ivar Smolin <okul@linux.ee>, 2005-2007."
+"Ivar Smolin <okul@linux.ee>, 2005-2008."
 
 #: ../src/yelp-window.c:2404
 msgid "Yelp"
