Updated Basque translation.
2008-01-16  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* eu.po: Updated Basque translation.


svn path=/trunk/; revision=3042

--- a/po/eu.po
+++ b/po/eu.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-01-14 17:16+0100\n"
-"PO-Revision-Date: 2008-01-13 01:46+0100\n"
+"POT-Creation-Date: 2008-01-16 16:48+0100\n"
+"PO-Revision-Date: 2008-01-15 19:22+0100\n"
 "Last-Translator: Iñaki Larrañaga Murgoitio <dooteo@euskalgnu.org>\n"
 "Language-Team: Basque <itzulpena@euskalgnu.org>\n"
 "MIME-Version: 1.0\n"
@@ -283,12 +283,10 @@ msgid "X11 Overviews"
 msgstr "X11 informazio orokorrak"
 
 #: ../data/toc.xml.in.h:1
-#, fuzzy
 msgid "2D Graphics"
 msgstr "2D grafikoak"
 
 #: ../data/toc.xml.in.h:2
-#, fuzzy
 msgid "3D Graphics"
 msgstr "3D grafikoak"
 
@@ -325,16 +323,14 @@ msgid "Arcade Games"
 msgstr "Arkade-jokoak"
 
 #: ../data/toc.xml.in.h:11
-#, fuzzy
 msgid "Archiving Tools"
-msgstr "Artxibaketa"
+msgstr "Artxibaketa-tresnak"
 
 #: ../data/toc.xml.in.h:12
 msgid "Art"
 msgstr "Artea"
 
 #: ../data/toc.xml.in.h:13
-#, fuzzy
 msgid "Artificial Intelligence"
 msgstr "Adimen artifiziala"
 
@@ -372,7 +368,7 @@ msgstr "Karta-jokoak"
 
 #: ../data/toc.xml.in.h:22
 msgid "Charting Tools"
-msgstr ""
+msgstr "Diagrama-tresnak"
 
 #: ../data/toc.xml.in.h:23
 msgid "Chat"
@@ -383,17 +379,14 @@ msgid "Chemistry"
 msgstr "Kimika"
 
 #: ../data/toc.xml.in.h:25
-#, fuzzy
 msgid "Clocks"
-msgstr "Ordularia"
+msgstr "Ordulariak"
 
 #: ../data/toc.xml.in.h:26
-#, fuzzy
 msgid "Compression Tools"
-msgstr "Konpresioa"
+msgstr "Konpresio-tresnak"
 
 #: ../data/toc.xml.in.h:27
-#, fuzzy
 msgid "Computer Science"
 msgstr "Konputazio zientifikoa"
 
@@ -402,31 +395,26 @@ msgid "Construction"
 msgstr "Eraikuntza"
 
 #: ../data/toc.xml.in.h:29
-#, fuzzy
 msgid "Contact Management"
 msgstr "Kontaktu-kudeaketa"
 
 #: ../data/toc.xml.in.h:30
-#, fuzzy
 msgid "Data Visualization"
 msgstr "Datuen bisualizazioa"
 
 #: ../data/toc.xml.in.h:31
-#, fuzzy
 msgid "Databases"
-msgstr "Datu-basea"
+msgstr "Datu-baseak"
 
 #: ../data/toc.xml.in.h:32
-#, fuzzy
 msgid "Debuggers"
-msgstr "Araztailea"
+msgstr "Araztaileak"
 
 #: ../data/toc.xml.in.h:33
 msgid "Desktop"
 msgstr "Mahaigaina"
 
 #: ../data/toc.xml.in.h:34
-#, fuzzy
 msgid "Desktop Settings"
 msgstr "Mahaigaineko konfigurazioa"
 
@@ -435,13 +423,11 @@ msgid "Dialup"
 msgstr "Modema"
 
 #: ../data/toc.xml.in.h:37
-#, fuzzy
 msgid "Dictionaries"
-msgstr "Hiztegia"
+msgstr "Hiztegiak"
 
 #. Translators: this is a menu title for burning audio and video to dics
 #: ../data/toc.xml.in.h:39
-#, fuzzy
 msgid "Disc Burning"
 msgstr "Disko grabazioa"
 
@@ -462,9 +448,8 @@ msgid "Electronics"
 msgstr "Elektronika"
 
 #: ../data/toc.xml.in.h:44
-#, fuzzy
 msgid "Email Tools"
-msgstr "Fitxategi-tresnak"
+msgstr "Posta-tresnak"
 
 #: ../data/toc.xml.in.h:45
 msgid "Emulator"
@@ -475,17 +460,14 @@ msgid "Engineering"
 msgstr "Ingeniaritza"
 
 #: ../data/toc.xml.in.h:47
-#, fuzzy
 msgid "File Manager"
 msgstr "Fitxategi-kudeatzailea"
 
 #: ../data/toc.xml.in.h:48
-#, fuzzy
 msgid "File Tools"
 msgstr "Fitxategi-tresnak"
 
 #: ../data/toc.xml.in.h:49
-#, fuzzy
 msgid "File Transfer"
 msgstr "Fitxategi-transferentzia"
 
@@ -494,14 +476,12 @@ msgid "Filesystem"
 msgstr "Fitxategi-sistema"
 
 #: ../data/toc.xml.in.h:51
-#, fuzzy
 msgid "Financial Tools"
-msgstr "Fitxategi-tresnak"
+msgstr "Finantza-tresnak"
 
 #: ../data/toc.xml.in.h:52
-#, fuzzy
 msgid "Flow Charting Tools"
-msgstr "Fluxu-diagrama"
+msgstr "Fluxu-diagramen tresnak"
 
 #: ../data/toc.xml.in.h:53
 msgid "GNOME Applications"
@@ -512,9 +492,8 @@ msgid "GTK"
 msgstr "GTK"
 
 #: ../data/toc.xml.in.h:55
-#, fuzzy
 msgid "GUI Designers"
-msgstr "GUI diseinatzailea"
+msgstr "GUI diseinatzaileak"
 
 #: ../data/toc.xml.in.h:57
 msgid "Generic applications for the GNOME environment"
@@ -549,12 +528,10 @@ msgid "Guides for getting involved in development"
 msgstr "Garapenean parte hartzeko gidak"
 
 #: ../data/toc.xml.in.h:65
-#, fuzzy
 msgid "Ham Radio"
 msgstr "Ham irratia"
 
 #: ../data/toc.xml.in.h:66
-#, fuzzy
 msgid "Hardware Settings"
 msgstr "Hardwarearen konfigurazioa"
 
@@ -567,22 +544,18 @@ msgid "History"
 msgstr "Historia"
 
 #: ../data/toc.xml.in.h:69
-#, fuzzy
 msgid "IDEs"
-msgstr "IDE"
+msgstr "IDEak"
 
 #: ../data/toc.xml.in.h:70
-#, fuzzy
 msgid "IRC Clients"
-msgstr "IRC bezeroa"
+msgstr "IRC bezeroak"
 
 #: ../data/toc.xml.in.h:71
-#, fuzzy
 msgid "Image Processing"
 msgstr "Irudi prozesamendua"
 
 #: ../data/toc.xml.in.h:72
-#, fuzzy
 msgid "Instant Messaging"
 msgstr "Berehalako mezularitza"
 
@@ -626,7 +599,6 @@ msgid "Math"
 msgstr "Matematikak"
 
 #: ../data/toc.xml.in.h:82
-#, fuzzy
 msgid "Medical Software"
 msgstr "Medikuntzako softwarea"
 
@@ -639,9 +611,8 @@ msgid "Miscellaneous Documentation"
 msgstr "Hainbat dokumentazio"
 
 #: ../data/toc.xml.in.h:85
-#, fuzzy
 msgid "Mixers"
-msgstr "Nahastailea"
+msgstr "Nahastaileak"
 
 #: ../data/toc.xml.in.h:86
 msgid "Monitor"
@@ -660,7 +631,6 @@ msgid "News"
 msgstr "Berriak"
 
 #: ../data/toc.xml.in.h:90
-#, fuzzy
 msgid "Numerical Analysis"
 msgstr "Analisi numerikoak"
 
@@ -686,15 +656,13 @@ msgstr "P2P"
 
 #: ../data/toc.xml.in.h:96
 msgid "PDA Communication"
-msgstr ""
+msgstr "PDA komunikazioa"
 
 #: ../data/toc.xml.in.h:97
-#, fuzzy
 msgid "Package Manager"
 msgstr "Pakete-kudeatzailea"
 
 #: ../data/toc.xml.in.h:98
-#, fuzzy
 msgid "Parallel Computing"
 msgstr "Kalkulu paraleloa"
 
@@ -709,26 +677,23 @@ msgstr "Fisika"
 #. Translators: this is a menu title for audio and video players
 #: ../data/toc.xml.in.h:102
 msgid "Players"
-msgstr ""
+msgstr "Erreproduzigailuak"
 
 #: ../data/toc.xml.in.h:103
-#, fuzzy
 msgid "Presentation Tools"
-msgstr "Aurkezpena"
+msgstr "Aurkezpen-tresnak"
 
 #: ../data/toc.xml.in.h:104 ../src/yelp-print.c:337 ../src/yelp-print.c:364
 msgid "Printing"
 msgstr "Inprimatzea"
 
 #: ../data/toc.xml.in.h:105
-#, fuzzy
 msgid "Profiling Tools"
-msgstr "Profilak"
+msgstr "Profil-tresnak"
 
 #: ../data/toc.xml.in.h:106
-#, fuzzy
 msgid "Project Management Tools"
-msgstr "Proiektu-kudeaketa"
+msgstr "Proiektu-kudeaketen tresnak"
 
 #: ../data/toc.xml.in.h:107
 msgid "Publishing"
@@ -739,23 +704,19 @@ msgid "Qt"
 msgstr "Qt"
 
 #: ../data/toc.xml.in.h:109
-#, fuzzy
 msgid "Raster Graphics"
 msgstr "Grafiko gordinak"
 
 #. Translators: this is a menu title for audio and video recorders
 #: ../data/toc.xml.in.h:111
-#, fuzzy
 msgid "Recorders"
-msgstr "Grabagailua"
+msgstr "Grabagailuak"
 
 #: ../data/toc.xml.in.h:112
-#, fuzzy
 msgid "Remote Access"
 msgstr "Urruneko atzipena"
 
 #: ../data/toc.xml.in.h:113
-#, fuzzy
 msgid "Revision Control"
 msgstr "Berrikuspen kontrola"
 
@@ -780,9 +741,8 @@ msgid "Security"
 msgstr "Segurtasuna"
 
 #: ../data/toc.xml.in.h:119
-#, fuzzy
 msgid "Sequencers"
-msgstr "Sekuentziadorea"
+msgstr "Sekuentziadoreak"
 
 #: ../data/toc.xml.in.h:120
 msgid "Settings"
@@ -807,9 +767,8 @@ msgid "Sound &amp; Video"
 msgstr "Soinua eta bideoa"
 
 #: ../data/toc.xml.in.h:125
-#, fuzzy
 msgid "Sound &amp; Video Editing"
-msgstr "Soinua eta bideoa"
+msgstr "Soinu eta bideoaren edizioa"
 
 #: ../data/toc.xml.in.h:126
 msgid "Sports"
@@ -820,9 +779,8 @@ msgid "Sports Games"
 msgstr "Kirol-jokoak"
 
 #: ../data/toc.xml.in.h:128
-#, fuzzy
 msgid "Spreadsheet Tools"
-msgstr "Kalkulu-orria"
+msgstr "Kalkulu-orrien tresnak"
 
 #: ../data/toc.xml.in.h:129
 msgid "Strategy Games"
@@ -841,17 +799,14 @@ msgid "Telephony"
 msgstr "Telefonia"
 
 #: ../data/toc.xml.in.h:133
-#, fuzzy
 msgid "Telephony Tools"
 msgstr "Telefonia-tresnak"
 
 #: ../data/toc.xml.in.h:134
-#, fuzzy
 msgid "Terminal Emulator"
 msgstr "Terminal-emulatzailea"
 
 #: ../data/toc.xml.in.h:135
-#, fuzzy
 msgid "Text Editors"
 msgstr "Testu-editoreak"
 
@@ -864,14 +819,12 @@ msgid "Tools to help you manage your computer"
 msgstr "Ordenagailua kudeatzen laguntzeko tresnak"
 
 #: ../data/toc.xml.in.h:138
-#, fuzzy
 msgid "Translation Tools"
-msgstr "Itzulpena"
+msgstr "Itzulpen-tresnak"
 
 #: ../data/toc.xml.in.h:139
-#, fuzzy
 msgid "Tuners"
-msgstr "Sintonizadorea"
+msgstr "Sintonizadoreak"
 
 #: ../data/toc.xml.in.h:140
 msgid "Utilities"
@@ -882,7 +835,6 @@ msgid "Utilities to help you get work done"
 msgstr "Zure lanak egiten laguntzeko tresnak"
 
 #: ../data/toc.xml.in.h:142
-#, fuzzy
 msgid "Vector Graphics"
 msgstr "Bektore grafikoak"
 
@@ -891,7 +843,6 @@ msgid "Video"
 msgstr "Bideoa"
 
 #: ../data/toc.xml.in.h:144
-#, fuzzy
 msgid "Video Conference"
 msgstr "Bideo-konferentzia"
 
@@ -901,12 +852,10 @@ msgid "Viewer"
 msgstr "Ikustailea"
 
 #: ../data/toc.xml.in.h:147
-#, fuzzy
 msgid "Web Browser"
 msgstr "Web arakatzailea"
 
 #: ../data/toc.xml.in.h:148
-#, fuzzy
 msgid "Web Development"
 msgstr "Web garapena"
 
@@ -915,7 +864,6 @@ msgid "Welcome to the GNOME Help Browser"
 msgstr "Ongi etorri GNOMEren Laguntza-arakatzailera"
 
 #: ../data/toc.xml.in.h:150
-#, fuzzy
 msgid "Word Processors"
 msgstr "Testu-prozesadorea"
 
@@ -1573,18 +1521,3 @@ msgstr "GNOME mahaigainaren dokumentazio-arakatzaile eta -ikustaile bat."
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Eskuratu GNOMEri buruzko laguntza"
-
-#~ msgid "AudioVideoEditing"
-#~ msgstr "Audio eta bideoaren edizioa"
-
-#~ msgid "Chart"
-#~ msgstr "Diagrama"
-
-#~ msgid "Email"
-#~ msgstr "Posta elektronikoa"
-
-#~ msgid "Finance"
-#~ msgstr "Finantzak"
-
-#~ msgid "PDA"
-#~ msgstr "PDA"
