Updated French translation by Valentin Gatien-Baron and Stéphane
2008-01-19  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation by Valentin Gatien-Baron and
	Stéphane Raimbault.

svn path=/trunk/; revision=3045

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-19  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* fr.po: Updated French translation by Valentin Gatien-Baron and
+	Stéphane Raimbault.
+
 2008-01-18  Priit Laes  <plaes at svn dot gnome dot org>
 
 	* et.po: Translation updated by Ivar Smolin
