Updated French translation.
svn path=/trunk/; revision=3046

--- a/po/fr.po
+++ b/po/fr.po
@@ -21,7 +21,7 @@ msgstr ""
 "Project-Id-Version: yelp 2.19\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-01-19 15:46+0100\n"
-"PO-Revision-Date: 2008-01-19 15:28+0100\n"
+"PO-Revision-Date: 2008-01-19 16:26+0100\n"
 "Last-Translator: Stéphane Raimbault <stephane.raimbault@gmail.com>\n"
 "Language-Team: GNOME French Team <gnomefr@traduc.org>\n"
 "MIME-Version: 1.0\n"
@@ -430,7 +430,7 @@ msgstr "Configuration du bureau"
 
 #: ../data/toc.xml.in.h:36
 msgid "Dialup"
-msgstr "Connexion téléphonique"
+msgstr "Connexions commutées"
 
 #: ../data/toc.xml.in.h:37
 msgid "Dictionaries"
