Remove forgotten "FindSlash" action that shouldn't have ever been
* data/ui/yelp-ui.xml: 
Remove forgotten "FindSlash" action
that shouldn't have ever been committed

svn path=/trunk/; revision=3048

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2008-01-21  Don Scorgie  <dscorgie@svn.gnome.org>
 
+	* data/ui/yelp-ui.xml: 
+	Remove forgotten "FindSlash" action
+	that shouldn't have ever been committed
+
 	* src/yelp-info.c: 
 	* src/yelp-transform.c:
 	* src/yelp-man.c:
