--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+=== 2.21.90 ===
+2008-01-28  Don Scorgie  <dscorgie@svn.gnome.org>
+
+	* configure.in: 
+	* NEWS:
+	Version 2.21.90
+
 2008-01-21  Don Scorgie  <dscorgie@svn.gnome.org>
 
 	* data/ui/yelp-ui.xml: 
