Updated assamese translations
svn path=/trunk/; revision=3055

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-01-30  Amitakhya Phukan <amitakhya@svn.gnome.org>
+
+	* LINGUAS: Added as to LINGUAS.
+	* as.po: Updated assamese translations.
+
 2008-01-29  Yannig Marchegay <yannig@marchegay.org>
 
 	* oc.po: Updated Occitan translation.
