Updated Occitan translation
svn path=/trunk/; revision=3062

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,7 @@
-2008-02-01  Ihar Hrachyshka <booxter@lacinka.org>
+2008-02-02  Yannig Marchegay <yannig@marchegay.org>
+
+	* oc.po: Updated Occitan translation.
+2008-02-01  Ihar Hrachyshka <booxter@lacinka.org>
 
 	* be@latin.po: Updated Belarusian Latin translation.
 
