--- a/po/es.po
+++ b/po/es.po
@@ -9,10 +9,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-01-13 16:16+0000\n"
-"PO-Revision-Date: 2008-01-13 18:41+0100\n"
+"POT-Creation-Date: 2008-01-13 17:42+0000\n"
+"PO-Revision-Date: 2008-02-05 12:20+0100\n"
 "Last-Translator: Jorge González <jorgegonz@svn.gnome.org>\n"
-"Language-Team: Español <<gnome-es-list@gnome.org>\n"
+"Language-Team: Español <gnome-es-list@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1431,7 +1431,7 @@ msgstr "Copiar dirección de _correo-e"
 
 #: ../src/yelp-window.c:495
 msgid "Help Browser"
-msgstr "Navegador de ayuda"
+msgstr "Visor de ayuda"
 
 #: ../src/yelp-window.c:586 ../src/yelp-window.c:638 ../src/yelp-window.c:1636
 msgid "Loading..."
