--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-12  Jovan Naumovski  <jovan@lugola.net>
+ 
+ 	* mk.po: Updated Macedonian translation.
+
 2008-02-08  Gil Forcada  <gforcada@gnome.org>
 
 	* ca.po: Updated Catalan translation.
