Updated Vietnamese translation
2008-02-17  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>

	* vi.po: Updated Vietnamese translation


svn path=/trunk/; revision=3072

--- a/po/vi.po
+++ b/po/vi.po
@@ -297,7 +297,7 @@ msgstr "Khả năng truy cập"
 
 #: ../data/toc.xml.in.h:4
 msgid "Action Games"
-msgstr "Trò chơi hoạt động"
+msgstr "Trò chơi hành động"
 
 #: ../data/toc.xml.in.h:5
 msgid "Adventure Games"
@@ -305,7 +305,7 @@ msgstr "Trò chơi phiêu lưu mạo hiểm"
 
 #: ../data/toc.xml.in.h:6
 msgid "Amusement"
-msgstr "Trò vui"
+msgstr "Giải trí"
 
 #: ../data/toc.xml.in.h:7
 msgid "Applications for viewing and manipulating graphics"
@@ -433,7 +433,7 @@ msgstr "Từ điển"
 
 #: ../data/toc.xml.in.h:39
 msgid "DiscBurning"
-msgstr "Chép ra đĩa"
+msgstr "Ghi đĩa"
 
 #: ../data/toc.xml.in.h:40
 msgid "Economy"
@@ -517,7 +517,7 @@ msgstr "Khoa địa chất"
 
 #: ../data/toc.xml.in.h:61
 msgid "Geoscience"
-msgstr "Khoa địa học"
+msgstr "Địa khoa học"
 
 #: ../data/toc.xml.in.h:62
 msgid "Graphics"
@@ -553,7 +553,7 @@ msgstr "IDE"
 
 #: ../data/toc.xml.in.h:70
 msgid "IRCClient"
-msgstr "Khách IRC"
+msgstr "Máy khách IRC"
 
 #: ../data/toc.xml.in.h:71
 msgid "ImageProcessing"
@@ -578,7 +578,7 @@ msgstr "Ứng dụng KDE"
 
 #: ../data/toc.xml.in.h:76
 msgid "Kids Games"
-msgstr "Trò chơi trẻ"
+msgstr "Trò chơi thiếu nhi"
 
 #: ../data/toc.xml.in.h:77
 msgid ""
@@ -588,7 +588,7 @@ msgstr "Học biết thêm để làm cho hệ thống dễ truy cập hơn cho 
 
 #: ../data/toc.xml.in.h:78
 msgid "Licenses"
-msgstr "Giấy phếp"
+msgstr "Giấy phép"
 
 #: ../data/toc.xml.in.h:79
 msgid "Literature"
@@ -604,7 +604,7 @@ msgstr "Toán học"
 
 #: ../data/toc.xml.in.h:82
 msgid "MedicalSoftware"
-msgstr "Phần mềm ý tế"
+msgstr "Phần mềm y tế"
 
 #: ../data/toc.xml.in.h:83
 msgid "Midi"
@@ -668,7 +668,7 @@ msgstr "Quản lý gói phần mềm"
 
 #: ../data/toc.xml.in.h:98
 msgid "ParallelComputing"
-msgstr "Máy tính song song"
+msgstr "Tính toán song song"
 
 #: ../data/toc.xml.in.h:99
 msgid "Photography"
