--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-17  Artur Flinta  <aflinta@gmail.com>
+
+	* pl.po: Updated Polish translation by GNOME PL Team.
+
 2008-02-17  Nguyễn Thái Ngọc Duy <pclouds@gmail.com>
 
 	* vi.po: Updated Vietnamese translation
