--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-17  Luca Ferretti  <elle.uca@libero.it>
+
+	* it.po: Updated Italian translation by Milo Casagrande.
+
 2008-02-17  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Reinout van Schouwen.
