--- a/po/fi.po
+++ b/po/fi.po
@@ -15,13 +15,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-02-13 11:54+0300\n"
+"POT-Creation-Date: 2008-02-18 07:39+0300\n"
 "PO-Revision-Date: 2006-08-16 06:40+0300\n"
 "Last-Translator: Ilkka Tuohela <hile@iki.fi>\n"
 "Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n == 1 ? 0 : 1;\n"
 
 #: ../data/info.xml.in.h:1
 msgid "GNU Info Pages"
@@ -325,7 +326,7 @@ msgstr "Opetukseen tai sen välineiksi tarkoitetut ohjelmat"
 
 #: ../data/toc.xml.in.h:10
 msgid "Arcade Games"
-msgstr ""
+msgstr "Pelihallipelit"
 
 #: ../data/toc.xml.in.h:11
 msgid "Archiving Tools"
@@ -373,7 +374,7 @@ msgstr "Korttipelit"
 
 #: ../data/toc.xml.in.h:22
 msgid "Charting Tools"
-msgstr ""
+msgstr "Kaaviotyökalut"
 
 #: ../data/toc.xml.in.h:23
 msgid "Chat"
@@ -397,7 +398,7 @@ msgstr "Tietojenkäsittelytiede"
 
 #: ../data/toc.xml.in.h:28
 msgid "Construction"
-msgstr ""
+msgstr "Rakentaminen"
 
 #: ../data/toc.xml.in.h:29
 msgid "Contact Management"
@@ -486,7 +487,7 @@ msgstr "Taloustyökalut"
 
 #: ../data/toc.xml.in.h:52
 msgid "Flow Charting Tools"
-msgstr ""
+msgstr "Vuokaaviotyökalut"
 
 #: ../data/toc.xml.in.h:53
 msgid "GNOME Applications"
@@ -518,7 +519,7 @@ msgstr "Geologia"
 
 #: ../data/toc.xml.in.h:61
 msgid "Geoscience"
-msgstr ""
+msgstr "Geotiede"
 
 #: ../data/toc.xml.in.h:62
 msgid "Graphics"
@@ -526,11 +527,11 @@ msgstr "Grafiikka"
 
 #: ../data/toc.xml.in.h:63
 msgid "Guides and manuals for applications that connect to the outside world"
-msgstr ""
+msgstr "Ohjeita ulkomaailman kanssa liittyville ohjelmille"
 
 #: ../data/toc.xml.in.h:64
 msgid "Guides for getting involved in development"
-msgstr ""
+msgstr "Ohjeita osallistumisesta kehitykseen"
 
 #: ../data/toc.xml.in.h:65
 msgid "Ham Radio"
@@ -585,6 +586,8 @@ msgid ""
 "Learn more about making your system more accessible for a range of "
 "disabilities"
 msgstr ""
+"Lisätietoja kuinka tehdä järjestelmästäsi käytettävämpi erilaisista "
+"vammoista kärsiville"
 
 #: ../data/toc.xml.in.h:78
 msgid "Licenses"
