Updated Finnish translation
svn path=/trunk/; revision=3081

--- a/po/fi.po
+++ b/po/fi.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-02-18 07:39+0300\n"
+"POT-Creation-Date: 2008-02-22 09:09+0300\n"
 "PO-Revision-Date: 2006-08-16 06:40+0300\n"
 "Last-Translator: Ilkka Tuohela <hile@iki.fi>\n"
 "Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
@@ -294,7 +294,7 @@ msgstr "2D-grafiikka"
 
 #: ../data/toc.xml.in.h:2
 msgid "3D Graphics"
-msgstr "3D-rafiikka"
+msgstr "3D-grafiikka"
 
 #: ../data/toc.xml.in.h:3
 msgid "Accessibility"
@@ -402,7 +402,7 @@ msgstr "Rakentaminen"
 
 #: ../data/toc.xml.in.h:29
 msgid "Contact Management"
-msgstr "Sisällönhallinta"
+msgstr "Yhteystietojen hallinta"
 
 #: ../data/toc.xml.in.h:30
 msgid "Data Visualization"
@@ -414,7 +414,7 @@ msgstr "Tietokannat"
 
 #: ../data/toc.xml.in.h:32
 msgid "Debuggers"
-msgstr "Debuggerit"
+msgstr "Virheenjäljitysohjelmat"
 
 #: ../data/toc.xml.in.h:33
 msgid "Desktop"
@@ -491,7 +491,7 @@ msgstr "Vuokaaviotyökalut"
 
 #: ../data/toc.xml.in.h:53
 msgid "GNOME Applications"
-msgstr "Gnomme-sovellukset"
+msgstr "Gnome-sovellukset"
 
 #: ../data/toc.xml.in.h:54
 msgid "GTK"
@@ -511,7 +511,7 @@ msgstr "Yleiset KDE-työpöydän sovellukset"
 
 #: ../data/toc.xml.in.h:59
 msgid "Geography"
-msgstr "Maantiede"
+msgstr "Geografia"
 
 #: ../data/toc.xml.in.h:60
 msgid "Geology"
@@ -659,7 +659,7 @@ msgstr "Muut ohjeet"
 
 #: ../data/toc.xml.in.h:95
 msgid "P2P"
-msgstr "P2P"
+msgstr "P2P (vertaisverkko-ohjelmat)"
 
 #: ../data/toc.xml.in.h:96
 msgid "PDA Communication"
@@ -773,7 +773,7 @@ msgstr "Ääni &amp; video"
 
 #: ../data/toc.xml.in.h:125
 msgid "Sound &amp; Video Editing"
-msgstr "Äänen &amp; videon muokkaus"
+msgstr "Äänen ja videon muokkaus"
 
 #: ../data/toc.xml.in.h:126
 msgid "Sports"
@@ -862,7 +862,7 @@ msgstr "WWW-selain"
 
 #: ../data/toc.xml.in.h:148
 msgid "Web Development"
-msgstr "WWW-kekhitys"
+msgstr "WWW-kehitys"
 
 #: ../data/toc.xml.in.h:149
 msgid "Welcome to the GNOME Help Browser"
