--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-22  Ilkka Tuohela <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2008-02-19 Baris Cicek <baris@teamforce.name.tr>
 
 	* tr.po: Updated Turkish translation from Serdar Cicek
