Translation updated by Ivar Smolin
2008-02-23  Priit Laes  <plaes at svn dot gnome dot org>

	* et.po: Translation updated by Ivar Smolin

svn path=/trunk/; revision=3084

--- a/po/et.po
+++ b/po/et.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-01-14 07:58+0000\n"
-"PO-Revision-Date: 2008-01-17 18:50+0200\n"
+"PO-Revision-Date: 2008-02-21 20:52+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -396,7 +396,7 @@ msgstr "Arvutiteadus"
 
 #: ../data/toc.xml.in.h:28
 msgid "Construction"
-msgstr ""
+msgstr "Konstrueerimine"
 
 #: ../data/toc.xml.in.h:29
 msgid "Contact Management"
@@ -533,7 +533,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:65
 msgid "Ham Radio"
-msgstr ""
+msgstr "Ham-raadio"
 
 #: ../data/toc.xml.in.h:66
 msgid "Hardware Settings"
@@ -619,7 +619,7 @@ msgstr "Miksrid"
 
 #: ../data/toc.xml.in.h:86
 msgid "Monitor"
-msgstr ""
+msgstr "Monitooring"
 
 #: ../data/toc.xml.in.h:87
 msgid "Motif"
@@ -717,7 +717,7 @@ msgstr "Salvestid"
 
 #: ../data/toc.xml.in.h:112
 msgid "Remote Access"
-msgstr ""
+msgstr "Kaugligipääs"
 
 #: ../data/toc.xml.in.h:113
 msgid "Revision Control"
