Updated Occitan translation
svn path=/trunk/; revision=3086

--- a/po/oc.po
+++ b/po/oc.po
@@ -969,11 +969,11 @@ msgstr ""
 
 #: ../data/yelp.schemas.in.h:7
 msgid "Use system fonts"
-msgstr "Utilisar las poliças del sistèma"
+msgstr "Utilizar las poliças del sistèma"
 
 #: ../data/yelp.schemas.in.h:8
 msgid "Use the default fonts set for the system."
-msgstr "Utilisar las poliças per defaut definidas pel sistèma."
+msgstr "Utilizar las poliças per defaut definidas pel sistèma."
 
 #: ../src/yelp-bookmarks.c:150
 msgid "Open Bookmark in New Window"
@@ -1088,7 +1088,7 @@ msgstr ""
 
 #: ../src/yelp-main.c:92
 msgid "Use a private session"
-msgstr "Utilisar una session privada"
+msgstr "Utilizar una session privada"
 
 #: ../src/yelp-main.c:101
 msgid "Define which cache directory to use"
