Updated Arabic Translation by Djihed Afifi.
svn path=/trunk/; revision=3088

--- a/po/ar.po
+++ b/po/ar.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: yelp.HEAD.ar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-02-10 13:20+0000\n"
-"PO-Revision-Date: 2008-02-26 16:08+0100\n"
+"PO-Revision-Date: 2008-02-26 16:25+0100\n"
 "Last-Translator: Djihed Afifi <djihed@gmail.com>\n"
 "Language-Team: Arabic <support@arabeyes.org>\n"
 "MIME-Version: 1.0\n"
@@ -586,7 +586,7 @@ msgstr "ألعاب الأطفال"
 
 #: ../data/toc.xml.in.h:77
 msgid "Learn more about making your system more accessible for a range of disabilities"
-msgstr ""
+msgstr "تعلم اكثر عن جعل نظامك متاحا لمجموعة من الإعاقات"
 
 #: ../data/toc.xml.in.h:78
 msgid "Licenses"
@@ -758,7 +758,7 @@ msgstr "التعيينات"
 
 #: ../data/toc.xml.in.h:121
 msgid "Settings users can manipulate to make their environment more pleasant"
-msgstr ""
+msgstr "الإعدادات التي يمكن للمستخدمين تغييرها لتحسين بيئة المستخدم"
 
 #: ../data/toc.xml.in.h:122
 msgid "Simulation Games"
