--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-02  Philip Withnall  <pwithnall@svn.gnome.org>
+
+	* en_GB.po: Updated British English translation.
+
 2008-03-02  Petr Kovar  <pknbe@volny.cz>
 
 	* cs.po: Updated Czech translation.
