--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-03-04  I. Felix <ifelix@svn.gnome.org>
+
+	* ta.po:  Tamil Translation updated by Tirumurthi Vasudevan
+
 2008-03-03  Rahul Bhalerao <b.rahul.pm@gmail.com>
 
 	* mr.po: Updated Marathi translations from Sandeep Shedmake.
