Translation updated by Ivar Smolin
2008-03-05  Priit Laes  <plaes at svn dot gnome dot org>

	* et.po: Translation updated by Ivar Smolin

svn path=/trunk/; revision=3101

--- a/po/et.po
+++ b/po/et.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: yelp HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2008-01-14 07:58+0000\n"
-"PO-Revision-Date: 2008-02-21 20:52+0200\n"
+"PO-Revision-Date: 2008-03-04 12:56+0200\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -320,7 +320,7 @@ msgstr "Audio ja videoga seotud rakendused"
 
 #: ../data/toc.xml.in.h:9
 msgid "Applications that teach or aid in learning"
-msgstr ""
+msgstr "Õppimist abistavad rakendused"
 
 #: ../data/toc.xml.in.h:10
 msgid "Arcade Games"
@@ -525,11 +525,11 @@ msgstr "Graafika"
 
 #: ../data/toc.xml.in.h:63
 msgid "Guides and manuals for applications that connect to the outside world"
-msgstr ""
+msgstr "Välisilmaga ühendust võtvate rakenduste juhendid ja käsiraamatud"
 
 #: ../data/toc.xml.in.h:64
 msgid "Guides for getting involved in development"
-msgstr ""
+msgstr "Juhendid arendustegevuses osalemiseks"
 
 #: ../data/toc.xml.in.h:65
 msgid "Ham Radio"
@@ -541,7 +541,7 @@ msgstr "Riistvara sätted"
 
 #: ../data/toc.xml.in.h:67
 msgid "Have some fun"
-msgstr ""
+msgstr "Veidike meelelahutust"
 
 #: ../data/toc.xml.in.h:68
 msgid "History"
@@ -725,7 +725,7 @@ msgstr "Versioonihaldus"
 
 #: ../data/toc.xml.in.h:114
 msgid "Robotics"
-msgstr ""
+msgstr "Robootika"
 
 #: ../data/toc.xml.in.h:115
 msgid "Role Playing Games"
@@ -797,11 +797,11 @@ msgstr "Televisioon"
 
 #: ../data/toc.xml.in.h:132
 msgid "Telephony"
-msgstr ""
+msgstr "Helistamine"
 
 #: ../data/toc.xml.in.h:133
 msgid "Telephony Tools"
-msgstr ""
+msgstr "Helistamisvahendid"
 
 #: ../data/toc.xml.in.h:134
 msgid "Terminal Emulator"
@@ -833,7 +833,7 @@ msgstr "Utiliidid"
 
 #: ../data/toc.xml.in.h:141
 msgid "Utilities to help you get work done"
-msgstr ""
+msgstr "Töötegemist abistavad utiliidid"
 
 #: ../data/toc.xml.in.h:142
 msgid "Vector Graphics"
@@ -850,7 +850,7 @@ msgstr "Videokonverents"
 #. Translators: This is a menu title for graphics viewing applications
 #: ../data/toc.xml.in.h:146
 msgid "Viewer"
-msgstr ""
+msgstr "Graafikavaatajad"
 
 #: ../data/toc.xml.in.h:147
 msgid "Web Browser"
@@ -1231,7 +1231,7 @@ msgstr ""
 
 #: ../src/yelp-search-parser.c:1095
 msgid "No Comment"
-msgstr ""
+msgstr "Kommentaarita"
 
 #. Much bigger problems
 #: ../src/yelp-search.c:238
