--- a/po/oc.po
+++ b/po/oc.po
@@ -8,14 +8,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: oc\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-02-19 20:27+0100\n"
-"PO-Revision-Date: 2008-02-02 21:13+0100\n"
+"POT-Creation-Date: 2008-03-07 10:23+0100\n"
+"PO-Revision-Date: 2008-03-07 10:30+0100\n"
 "Last-Translator: Yannig Marchegay (Kokoyaya) <yannig@marchegay.org>\n"
 "Language-Team: Occitan <ubuntu-l10n-oci@lists.ubuntu.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);"
 
 #: ../data/info.xml.in.h:1
 msgid "GNU Info Pages"
@@ -403,7 +403,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:31
 msgid "Databases"
-msgstr ""
+msgstr "Basas de donadas"
 
 #: ../data/toc.xml.in.h:32
 msgid "Debuggers"
@@ -415,7 +415,7 @@ msgstr "Burèu"
 
 #: ../data/toc.xml.in.h:34
 msgid "Desktop Settings"
-msgstr ""
+msgstr "Paramètres del burèu"
 
 #: ../data/toc.xml.in.h:36
 msgid "Dialup"
@@ -460,7 +460,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:47
 msgid "File Manager"
-msgstr ""
+msgstr "Gestionari de fichièrs"
 
 #: ../data/toc.xml.in.h:48
 msgid "File Tools"
@@ -468,7 +468,7 @@ msgstr ""
 
 #: ../data/toc.xml.in.h:49
 msgid "File Transfer"
-msgstr ""
+msgstr "Transferiment de fichièr"
 
 #: ../data/toc.xml.in.h:50
 msgid "Filesystem"
@@ -675,7 +675,7 @@ msgstr "Fisica"
 #. Translators: this is a menu title for audio and video players
 #: ../data/toc.xml.in.h:102
 msgid "Players"
-msgstr ""
+msgstr "Jogaires"
 
 #: ../data/toc.xml.in.h:103
 msgid "Presentation Tools"
@@ -849,7 +849,7 @@ msgstr "Visionaira"
 
 #: ../data/toc.xml.in.h:147
 msgid "Web Browser"
-msgstr ""
+msgstr "Navegaire web"
 
 #: ../data/toc.xml.in.h:148
 msgid "Web Development"
@@ -1500,3 +1500,4 @@ msgstr "Un navegador e legidor de documentacion pel burèu GNOME."
 #: ../yelp.desktop.in.in.h:1
 msgid "Get help with GNOME"
 msgstr "Obténer d'ajuda amb GNOME"
+
